removed scrollbar, fixed hero top space

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -79,12 +79,18 @@ $animation-length: 80s;
 
 html,
 body {
-  overflow-x: hidden;
   width: 100%;
 }
 
 body {
   position: relative;
+  overflow: scroll !important;
+  scrollbar-width: none; /* hide scrollbar on Firefox */
+  -ms-overflow-style: none; /* hide scrollbar on IE 10+ */
+}
+
+body::-webkit-scrollbar {
+  display: none; /* hide scrollbar on Safari & Chrome */
 }
 
 // *** navbar ***
@@ -356,7 +362,7 @@ body {
   z-index: 5;
   padding: 3.5%;
 
-  @media only screen and (min-width: 767px) {
+  /*@media only screen and (min-width: 767px) {
     padding: 5%;
   }
 
@@ -374,7 +380,7 @@ body {
 
   @media only screen and (max-width: 2000px) {
     margin-top: 100rem;
-  }
+  }*/
 }
 
 .intro-container {
@@ -384,8 +390,35 @@ body {
   border-radius: 33px;
 }
 
-// *** what can you do section ***
+// *** testimonials section ***
+.testimonials {
+  position: relative;
+  z-index: 5;
+  margin-top: -1vw; //white line was appearing between sections
+  margin-bottom: 4%;
+}
 
+.testimonial-quote {
+  font-size: 125%;
+  @media only screen and (max-width: 767px) {
+    padding-top: 100px;
+    font-size: 100%;
+  }
+}
+
+.testimonial-name {
+  font-size: 115%;
+  @media only screen and (max-width: 767px) {
+    font-size: 100%;
+  }
+}
+
+.testimonial-image {
+  width: 200px;
+  border-radius: 50%;
+}
+
+// *** what can you do section ***
 @keyframes expand {
   0% {
     height: auto;
@@ -668,34 +701,6 @@ a:hover {
   transition: ease 0.3s;
   opacity: 0.7;
   text-decoration: none;
-}
-
-// *** testimonials section ***
-.testimonials {
-  position: relative;
-  z-index: 5;
-  margin-top: -1vw; //white line was appearing between sections
-  margin-bottom: 4%;
-}
-
-.testimonial-quote {
-  font-size: 125%;
-  @media only screen and (max-width: 767px) {
-    padding-top: 100px;
-    font-size: 100%;
-  }
-}
-
-.testimonial-name {
-  font-size: 115%;
-  @media only screen and (max-width: 767px) {
-    font-size: 100%;
-  }
-}
-
-.testimonial-image {
-  width: 200px;
-  border-radius: 50%;
 }
 
 // *** tracks section + first carousel ***
